recursion.logo.lessons.recursion.logo.koch.Crab.scala.error
Crab:8: error: not found: value hexaKoch
    hexaKoch(levels-1,length*facteur)
    ^Crab:10: error: not found: value hexaKoch
    hexaKoch(levels-1,length*facteur)
    ^