recursion.logo.lessons.recursion.logo.koch.Crab.scala.code
def crab(levels:Int, length:Double) {
  if(levels==0){
    avance(length)
  }
  else{
    var facteur = 1/Math.sqrt(2)
    gauche(45)
    hexaKoch(levels-1,length*facteur)
    droite(90)
    hexaKoch(levels-1,length*facteur)
    gauche(45)
  }
}